{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player1Gameplay",
            "id": "02d20b4b-17bb-4c05-8322-9f91fa998174",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "eeb35152-0f60-4e50-a8fe-79e089ae1fad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "ca76b754-f780-42b1-b4f0-715fa301196e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Soft Drop",
                    "type": "Value",
                    "id": "2e54e892-d397-401f-bbaa-5d50391fefc4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Hard Drop",
                    "type": "Value",
                    "id": "35271f18-eefe-4aac-94fd-dcf0db41ab30",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Keys",
                    "id": "0a968b74-8de3-4065-8c09-a15eba01e41c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "586ceef8-d6bc-4251-9b9d-b8bcc17a89f0",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fe741dfa-9b9d-4b04-9779-a3941403f6f1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e285f674-dc11-4afb-8f87-2f01348bf412",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5dc4c1c7-5b57-498b-b759-92542ee6c2c6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keys",
                    "id": "25fe5a6d-0cd8-4c61-bfe2-7454613bcf29",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Soft Drop",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Down",
                    "id": "a8a64810-05bc-4236-baa5-eaf4bd0daafc",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Soft Drop",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "fbebc0dc-56d9-42cd-a3fe-5faef8bb118d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Soft Drop",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keys",
                    "id": "43aa2b66-dd10-4960-acba-d45a782d50fd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Right",
                    "id": "4126ca90-5c0c-4c1a-a42d-2fb0ee209ea8",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "4f4f2001-5ea3-4219-8f1e-c34d9a01fdac",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "1f88b9c9-d3ea-410e-86bf-d3e2cab97ab8",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "e4c4ab03-ad2b-4fc7-85a3-cc357d18d95b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keys",
                    "id": "057cb497-6f43-48ce-ad32-7f009ee9c232",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hard Drop",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "down",
                    "id": "93b05b84-e312-4686-83be-6fe181ca22a4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hard Drop",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}